<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioTrack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_audiotrack_24"
            android:text="@string/audio_track"
            android:textAllCaps="false"
            app:iconGravity="top"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:iconTint="@color/white"
            app:shapeAppearance="@style/curved"
            app:tint="@color/white"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtitleBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_subtitles_24"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/subtitles"
            app:iconGravity="top"
            android:background="?android:selectableItemBackground"

            android:clickable="true"
            android:focusable="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:iconTint="@color/white"
            app:shapeAppearance="@style/curved"
            app:tint="@color/white"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioBooster"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_baseline_speaker_24"
            android:text="@string/booster"
            app:iconGravity="top"
            android:background="?android:selectableItemBackground"

            android:clickable="true"
            android:focusable="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:iconTint="@color/white"
            app:shapeAppearance="@style/curved"
            app:tint="@color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/speedBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_speed_24"
            android:text="@string/speed"
            app:iconGravity="top"
            android:background="?android:selectableItemBackground"

            android:clickable="true"
            android:focusable="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:iconTint="@color/white"
            app:shapeAppearance="@style/curved"
            app:tint="@color/white"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sleepTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"

            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_timer_24"
            android:text="@string/sleep_timer"
            app:iconGravity="top"
            android:background="?android:selectableItemBackground"

            android:clickable="true"
            android:focusable="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:iconTint="@color/white"
            app:shapeAppearance="@style/curved"
            app:tint="@color/white"
            android:textColor="@color/white"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/pipBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_baseline_picture_in_picture_alt_24"
            android:text="@string/pip_mode"
            app:iconGravity="top"
            android:background="?android:selectableItemBackground"

            android:clickable="true"
            android:focusable="true"

            style="@style/Widget.AppCompat.Button.Borderless"
            app:iconTint="@color/white"
            app:shapeAppearance="@style/curved"
            app:tint="@color/white"
            />
    </LinearLayout>
</LinearLayout>