<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="#01000000"
    android:orientation="vertical">

  <FrameLayout
      android:id="@+id/previewFrameLayout"
      android:layout_width="150dp"
      android:layout_height="100dp">

    <ImageView
        android:id="@+id/imageViewFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

  </FrameLayout>


  <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
      android:id="@+id/exo_progress"
      android:backgroundTint="#42000000"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:scrubber_color="@color/redNetflix"
      app:unplayed_color="#80FFFFFF"
      app:buffered_color="#80FFFFFF"
      app:played_color="@color/redNetflix"
      app:previewAnimationEnabled="true"
      app:previewFrameLayout="@id/previewFrameLayout"/>


<!--  <com.google.android.exoplayer2.ui.DefaultTimeBar-->
<!--      android:id="@id/exo_progress"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      app:scrubber_color="@color/redNetflix"-->
<!--      app:unplayed_color="#80FFFFFF"-->
<!--      app:buffered_color="#80FFFFFF"-->
<!--      app:played_color="@color/redNetflix"-->
<!--      app:scrubber_enabled_size="10dp"-->
<!--      android:layout_marginHorizontal="5dp"-->
<!--      android:maxHeight="5dp"-->
<!--      android:progressDrawable="@drawable/seekbar_progress_style"-->
<!--      android:thumb="@drawable/seekbar_thumb"-->
<!--      android:thumbOffset="0dp"-->
<!--      android:min="0"-->
<!--      android:max="15"-->
<!--      android:progress="25"-->
<!--      android:backgroundTint="#42000000"-->
<!--    />-->

  <LinearLayout
      android:layout_width="match_parent"
      android:gravity="end"
      android:backgroundTint="#42000000"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <!--Thời Gian hiện tại-->
    <TextView android:id="@id/exo_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/duration"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:text="@string/semi_colon"/>


    <!-- Tổng thời gian -->
    <TextView android:id="@id/exo_duration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="16sp"
        android:layout_margin="10dp"
        android:textStyle="bold"
      android:textColor="@color/white"
        android:text="@string/loading"/>

  </LinearLayout>

</LinearLayout>



